--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -56,7 +56,7 @@
   padding-top: 5rem;
   display: flex;
   justify-content: start;
-  align-items: center;
+  padding-left: 3.5rem;
   flex-direction: column;
 }
 .HomeFooterDescription div {
@@ -66,7 +66,7 @@
   grid-gap: 5rem;
 }
 .HomeFooterDescription h2 {
-  font-size: 12rem;
+  font-size: 9.2rem;
 }
 .HomeFooterDescriptionItem button {
   background: none;
@@ -318,16 +318,20 @@
     font-size: 1.5rem;
   }
   .HomeHeaderBlock h2 {
-    font-size: 2.8rem;
+    font-size: 2.5rem;
   }
   .HomeHeaderBlock {
     height: max-content;
+  }
+  .HomeFooterDescription {
+    padding: 2rem 4rem
   }
   .HomeFooterDescriptionItem button {
     width: 15rem;
     height: 4rem;
     font-size: 1.5rem;
   }
+  
   .blockHeaderImg {
     padding: 4rem;
   }
@@ -408,7 +412,7 @@
     padding-bottom: 3 rem;
   }
   .HomeFooterDescription {
-    padding-top: 1.5rem;
+    padding: 1rem;
   }
   .image {
     width: 30rem;
