--- a/src/components/EventBlock/EventBlock.css
+++ b/src/components/EventBlock/EventBlock.css
@@ -1,87 +1,58 @@
-.programmContentBlock {
+.eventContentBlock {
   display: flex;
   align-items: end;
 
   &.blue {
-    .programmContentInfo {
-      background: linear-gradient(140.97deg, #e1f3ff -2.2%, #b9e2ff 93.67%);
+    .eventContentInfo {
+      border: 6px #82cbff solid;
     }
   }
   &.red {
-    .programmContentInfo {
-      background: linear-gradient(
-        90deg,
-        rgba(210, 74, 67, 0.5) 0%,
-        #f34037 100%
-      );
-    }
-  }
-  &.green {
-    .programmContentInfo {
-      background: linear-gradient(
-        89.98deg,
-        rgba(252, 222, 68, 0.24) 38.36%,
-        #fcde44 99.98%
-      );
-    }
-  }
-  &.yellow {
-    .programmContentInfo {
-      background: linear-gradient(
-        90deg,
-        rgba(105, 219, 0, 0.31) 31.29%,
-        #69db00 118.71%
-      );
-    }
-  }
-  &.darkblue {
-    .programmContentInfo {
-      background: linear-gradient(
-        89.98deg,
-        rgba(78, 137, 251, 0.33) 29.34%,
-        #4e89fb 99.98%
-      );
+    .eventContentInfo {
+      border: 6px red solid;
     }
   }
 }
-.programmContentInfo {
-  width: 60rem;
-  height: 22.5rem;
-  border-radius: 7rem;
+.eventContentInfo {
+  width: 90rem;
+  height: 26rem;
+  border-radius: 8rem;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.programmContentInfo h2 {
-  font-size: 4.5rem;
+.eventContentInfo h2 {
+  font-size: 5rem;
 }
-.programmContentButton {
+.eventContentButton {
   width: 2rem;
   height: 2rem;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.programmButton {
+.eventButton {
   background-color: transparent;
   width: 13rem;
   height: 6rem;
   cursor: pointer;
 }
 @media (max-width: 1024px) {
-  .programmContentInfo {
+  .eventContentInfo {
     height: 20rem;
+    width: 60rem;
+    border-radius: 6rem;
   }
-  .programmContentInfo h2 {
+  .eventContentInfo h2 {
     font-size: 3.75rem;
   }
 }
 
 @media (max-width: 767px) {
-  .programmContentInfo h2 {
+  .eventContentInfo h2 {
     font-size: 3rem;
   }
-  .programmContentInfo {
+  .eventContentInfo {
     width: 43rem;
     height: 14rem;
     border-radius: 5rem;
@@ -89,10 +60,10 @@
 }
 
 @media (max-width: 500px) {
-  .programmContentInfo h2 {
+  .eventContentInfo h2 {
     font-size: 2rem;
   }
-  .programmContentInfo {
+  .eventContentInfo {
     width: 30rem;
     height: 12rem;
     border-radius: 5rem;
