--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -14,6 +14,9 @@
   justify-content: center;
   align-items: center;
   grid-gap: 0 1.3rem;
+  img {
+    width: 30rem;
+  }
 }
 .headerLogo {
   font-size: 3rem;
@@ -83,6 +86,11 @@
   .header {
     padding: 0 5rem;
   }
+  .headerLogo {
+    img {
+      width: 22rem;
+    }
+  }
   .logo1 {
     display: block;
   }
@@ -113,7 +121,6 @@
     flex-direction: column;
     grid-gap: 1.5rem;
   }
-
   .headerNav.active {
     transform: translateX(100%);
   }
@@ -131,21 +138,24 @@
   }
   .headerMenu {
     display: block;
-    margin-left: auto;
-    margin-right: 4rem;
+    /* margin-left: auto;
+    margin-right: 4rem; */
     background: none;
     border: none;
   }
-
   .headerMenu button {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 3.2rem;
-    height: 3.2rem;
+    width: 4.2rem;
+    height: 4.2rem;
     background: transparent;
     border: none;
     outline: none;
+    img {
+      width: 100%;
+      height: 100%;
+    }
   }
   .headerMenu button:hover {
     background: none;
@@ -153,6 +163,17 @@
   }
   .headerButton {
     margin-left: 0rem;
+  }
+}
+@media (max-width: 766px) {
+  .headerMenu button {
+    width: 3.2rem;
+    height: 3.2rem;
+  }
+  .headerLogo {
+    img {
+      width: 16rem;
+    }
   }
 }
 @media (max-width: 500px) {
@@ -165,7 +186,13 @@
   .logo2 {
     display: block;
   }
-  .headerLogo h2 {
-    font-size: 2rem;
+  .headerLogo {
+    img {
+      width: 14rem;
+    }
+  }
+  .headerMenu button {
+    width: 2.5rem;
+    height: 2.5rem;
   }
 }
