--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -81,7 +81,16 @@
 .logo2 {
   display: none;
 }
-
+.headerNavBtn {
+  display: none;
+}
+@media (min-width: 1900px) {
+  .headerLogo {
+    img {
+      width: 22rem;
+    }
+  }
+}
 @media (max-width: 1024px) {
   .header {
     padding: 0 5rem;
@@ -163,6 +172,12 @@
   }
   .headerButton {
     margin-left: 0rem;
+  }
+  .regBtn {
+    display: none;
+  }
+  .headerNavBtn {
+    display: block;
   }
 }
 @media (max-width: 766px) {
