--- a/src/components/modal/Modal.module.css
+++ b/src/components/modal/Modal.module.css
@@ -3,7 +3,8 @@
   justify-content: center;
   align-items: center;
   grid-gap: 2.5rem;
-  padding-bottom: 2rem;
+  /* padding-bottom: 2rem; */
+  margin-bottom: 4rem;
 }
 .modalButton {
   width: 25rem;
@@ -23,7 +24,6 @@
   border-radius: 2rem;
   font-size: 2rem;
 }
-
 .modalContainer {
   display: flex;
   justify-content: center;
@@ -65,11 +65,12 @@
   border-bottom: 2px solid black;
   height: 4rem;
   font-size: 2rem;
-  padding-left: 3rem;
-  padding-right: 3rem;
-  margin-bottom: 3rem;
+  padding: 0 1rem;
+  /* margin-bottom: 3rem; */
 }
-.modalInput:hover {
+.modalInput:hover,
+.modalInput:focus,
+.cityList:hover {
   border-bottom: 2px solid #fdcc62;
   transition: all 0.4s ease-in-out;
 }
@@ -98,10 +99,83 @@
   border-bottom: 2px solid black;
   font-size: 2rem;
 }
-.cityList:hover {
-  border-bottom: 2px solid #fdcc62;
-  transition: all 0.4s ease-in-out;
-}
 .cityList:focus {
   outline: none;
+}
+
+@media (max-width: 1024px) {
+  .modalItemInput {
+    grid-gap: 2rem;
+    margin-bottom: 3rem;
+  }
+  .modalItemInput:last-child {
+    margin-bottom: 2rem;
+  }
+  .containerHead h2 {
+    font-size: 3rem;
+    margin-bottom: 2rem;
+  }
+  .modalInput {
+    height: 3rem;
+    font-size: 1.6rem;
+    padding: 0 1rem;
+  }
+  .cityList {
+    width: 18rem;
+    font-size: 1.6rem;
+  }
+  .modalButton {
+    width: 25rem;
+    height: 6rem;
+    font-size: 1.8rem;
+  }
+}
+@media (max-width: 766px) {
+  .modalItemInput {
+    grid-gap: 2rem;
+    margin-bottom: 2.6rem;
+  }
+  .modalItemInput:last-child {
+    margin-bottom: 1.5rem;
+  }
+  .containerHead h2 {
+    font-size: 2.5rem;
+  }
+  .modalInput {
+    font-size: 1.4rem;
+  }
+  .cityList {
+    width: 16rem;
+    font-size: 1.4rem;
+  }
+  .modalButton {
+    width: 22rem;
+    height: 5.8rem;
+    font-size: 1.5rem;
+  }
+}
+@media (max-width: 500px) {
+  .modalItemInput {
+    grid-gap: 1.6rem;
+    margin-bottom: 3rem;
+  }
+  .modalItemInput:last-child {
+    margin-bottom: rem;
+  }
+  .containerHead h2 {
+    font-size: 2.5rem;
+    margin-bottom: 3rem;
+  }
+  .modalInput {
+    font-size: 1.2rem;
+  }
+  .cityList {
+    width: 15rem;
+    font-size: 1.2rem;
+  }
+  .modalButton {
+    width: 22rem;
+    height: 5.8rem;
+    font-size: 1.5rem;
+  }
 }
