--- a/src/pages/Register/Register.module.css
+++ b/src/pages/Register/Register.module.css
@@ -65,7 +65,8 @@
 }
 .modalInput:hover,
 .modalInput:focus,
-.cityList:hover {
+.cityList:hover,
+a.button:hover {
   border-bottom: 2px solid #fdcc62;
   transition: all 0.4s ease-in-out;
 }
@@ -99,21 +100,21 @@
 }
 
 .dropidropi {
-  margin: 4rem 2rem;
+  margin-bottom: 3rem;
+  width: 100%;
 }
 a.button {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-left: 1.8rem;
-  font-weight: 350;
+  padding: 0.8rem 0;
+  padding-left: 1rem;
+  font-weight: 400;
   border: none;
   border-bottom: #000000 solid 2px;
-  font-size: 2.2rem;
+  font-size: 2rem;
   cursor: pointer;
-  width: 30rem;
 }
-
 .dropdown summary {
   list-style: none;
   list-style-type: none;
@@ -121,32 +122,27 @@ a.button {
   justify-content: center;
   align-items: center;
 }
-
 .dropdown ul {
   position: relative;
-  justify-content: start;
   box-sizing: border-box;
   z-index: 2;
   list-style: none;
   height: 12rem;
   overflow-y: scroll;
   margin-top: 2rem;
-  width: 400px;
+  width: 500px;
 }
 
 .dropdown ul li {
   font-size: 1.8rem;
-  text-wrap: balance;
   margin: 1rem;
+  text-align: left;
 }
 
 .dropdown ul li input {
-  width: 20px;
-  height: 20px;
+  width: 18px;
+  height: 18px;
   margin-right: 1rem;
-}
-.abs{
-    position: ;
 }
 
 @media (max-width: 1024px) {
@@ -175,6 +171,33 @@ a.button {
     height: 6rem;
     font-size: 1.8rem;
   }
+  .dropidropi {
+    margin-bottom: 2rem;
+  }
+  a.button {
+    padding: 0.8rem 0;
+    padding-left: 1rem;
+    font-weight: 400;
+    font-size: 1.6rem;
+  }
+
+  .dropdown ul {
+    z-index: 2;
+    height: 12rem;
+    margin-top: 2rem;
+    width: 400px;
+  }
+
+  .dropdown ul li {
+    font-size: 1.2rem;
+    margin: 1rem;
+  }
+
+  .dropdown ul li input {
+    width: 16px;
+    height: 16px;
+    margin-right: 1rem;
+  }
 }
 @media (max-width: 766px) {
   .modalItemInput {
@@ -198,6 +221,33 @@ a.button {
     width: 22rem;
     height: 5.8rem;
     font-size: 1.5rem;
+  }
+
+  .dropidropi {
+    margin-bottom: 2.6rem;
+  }
+  a.button {
+    padding: 0.5rem 0;
+    padding-left: 1rem;
+    font-weight: 400;
+    font-size: 1.4rem;
+  }
+
+  .dropdown ul {
+    height: 12rem;
+    margin-top: 2rem;
+    width: 340px;
+  }
+
+  .dropdown ul li {
+    font-size: 1.2rem;
+    margin: 1rem;
+  }
+
+  .dropdown ul li input {
+    width: 16px;
+    height: 16px;
+    margin-right: 1rem;
   }
 }
 @media (max-width: 500px) {
@@ -229,49 +279,29 @@ a.button {
     font-size: 1.5rem;
   }
   .dropidropi {
-    margin: 4rem 2rem;
+    margin-bottom: 2.6rem;
   }
   a.button {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-left: 1.8rem;
-    font-weight: 350;
-    border: none;
-    border-bottom: #000000 solid 2px;
-    font-size: 2.2rem;
-    cursor: pointer;
-    width: 30rem;
-  }
-
-  .dropdown summary {
-    list-style: none;
-    list-style-type: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    padding: 0.5rem 0;
+    padding-left: 1rem;
+    font-weight: 400;
+    font-size: 1.4rem;
   }
 
   .dropdown ul {
-    position: relative;
-    box-sizing: border-box;
-    z-index: 2;
-    list-style: none;
     height: 12rem;
-    overflow-y: scroll;
     margin-top: 2rem;
-    width: 400px;
+    width: 430px;
   }
 
   .dropdown ul li {
-    font-size: 1.8rem;
-    text-wrap: balance;
+    font-size: 1.2rem;
     margin: 1rem;
   }
 
   .dropdown ul li input {
-    width: 20px;
-    height: 20px;
+    width: 16px;
+    height: 16px;
     margin-right: 1rem;
   }
 }
