--- a/src/pages/Register/Register.module.css
+++ b/src/pages/Register/Register.module.css
@@ -1,20 +1,3 @@
-.modalItemInput {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  grid-gap: 2.5rem;
-  margin-bottom: 4rem;
-  width: 100%;
-}
-.modalButton {
-  width: 35rem;
-  height: 8rem;
-  border: none;
-  background-color: #fdcc62;
-  color: black;
-  border-radius: 2rem;
-  font-size: 2.5rem;
-}
 .modalContainer {
   display: flex;
   justify-content: center;
@@ -35,6 +18,23 @@
   padding: 5rem;
   border-radius: 2rem;
 }
+.modalItemInput {
+  display: flex;
+  align-items: center;
+  grid-gap: 2.5rem;
+  margin-bottom: 4rem;
+  width: 100%;
+}
+.modalButton {
+  width: 35rem;
+  height: 8rem;
+  border: none;
+  background-color: #fdcc62;
+  color: black;
+  border-radius: 2rem;
+  font-size: 2.5rem;
+}
+/* *Наполнение* */
 .containerHead {
   display: flex;
   justify-content: center;
@@ -46,12 +46,12 @@
   color: #fdcc62;
   margin-bottom: 3rem;
 }
-.containerHead p {
-  font-size: 4rem;
-  font-weight: 600;
-  background: linear-gradient(90deg, #ffffff 38.5%, #528cfb 100%);
-  padding: 1rem;
-  border-radius: 2.5rem;
+
+.column {
+  width: 100%;
+  grid-gap: 4rem;
+  display: flex;
+  flex-direction: column;
 }
 .modalInput {
   width: 100%;
@@ -63,6 +63,18 @@
   font-size: 2rem;
   padding: 0 1rem;
 }
+
+/* .modalTextarea {
+  width: 100%;
+  border: 2px solid black;
+  height: 12rem;
+  border-radius: 15px;
+  font-size: 2rem;
+  padding: 2rem;
+  display: flex;
+  align-items: center;
+} */
+
 .modalInput:hover,
 .modalInput:focus,
 .cityList:hover,
@@ -73,16 +85,7 @@ a.button:hover {
 .modalInput:focus {
   outline: none;
 }
-.modalTextarea {
-  width: 100%;
-  border: 2px solid black;
-  height: 12rem;
-  border-radius: 15px;
-  font-size: 2rem;
-  padding: 2rem;
-  display: flex;
-  align-items: center;
-}
+
 .cityList {
   display: flex;
   flex-wrap: wrap;
@@ -123,19 +126,15 @@ a.button {
   align-items: center;
 }
 .dropdown ul {
-  position: relative;
-  box-sizing: border-box;
-  z-index: 2;
   list-style: none;
-  height: 12rem;
-  overflow-y: scroll;
   margin-top: 2rem;
-  width: 500px;
+  text-wrap: balance;
+  width: 52rem;
 }
 
 .dropdown ul li {
   font-size: 1.8rem;
-  margin: 1rem;
+  margin: 2rem;
   text-align: left;
 }
 
@@ -150,8 +149,8 @@ a.button {
     grid-gap: 2rem;
     margin-bottom: 3rem;
   }
-  .modalItemInput:last-child {
-    margin-bottom: 2rem;
+  .column {
+    grid-gap: 3rem;
   }
   .containerHead h2 {
     font-size: 3rem;
@@ -182,10 +181,8 @@ a.button {
   }
 
   .dropdown ul {
-    z-index: 2;
-    height: 12rem;
     margin-top: 2rem;
-    width: 400px;
+    width: 30rem;
   }
 
   .dropdown ul li {
@@ -204,8 +201,8 @@ a.button {
     grid-gap: 2rem;
     margin-bottom: 2.6rem;
   }
-  .modalItemInput:last-child {
-    margin-bottom: 1.5rem;
+  .column {
+    grid-gap: 2.6rem;
   }
   .containerHead h2 {
     font-size: 2.5rem;
@@ -234,9 +231,8 @@ a.button {
   }
 
   .dropdown ul {
-    height: 12rem;
     margin-top: 2rem;
-    width: 340px;
+    width: 20rem;
   }
 
   .dropdown ul li {
@@ -252,22 +248,22 @@ a.button {
 }
 @media (max-width: 500px) {
   .container {
-    padding: 10px 0 0 0;
+    padding: 2rem 1rem;
   }
   .modalItemInput {
     grid-gap: 1.6rem;
     margin-bottom: 3rem;
+    width: 90%;
   }
-  .modalItemInput:last-child {
-    margin-bottom: rem;
+  .column {
+    grid-gap: 3rem;
   }
   .containerHead h2 {
     font-size: 2.5rem;
-    margin-bottom: 3rem;
+    margin-bottom: 1rem;
   }
   .modalInput {
     font-size: 1.2rem;
-    width: 80%;
   }
   .cityList {
     width: 15rem;
@@ -289,7 +285,6 @@ a.button {
   }
 
   .dropdown ul {
-    height: 12rem;
     margin-top: 2rem;
     width: 430px;
   }
