--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -210,14 +210,16 @@
   margin-bottom: 10rem;
 }
 .mapContainer {
-  width: 143rem;
+  width: 150rem;
+  height: 70rem;
+}
+.map {
+  width: 100%;
+  height: 100%;
 }
 .underMap {
   font-size: 3rem;
   margin-top: 2rem;
-  width: 80%;
-  display: flex;
-  justify-content: space-between;
 }
 
 [class*="ymaps-2-1-79-copyright ymaps-2-1-79-copyright_logo_no"] {
@@ -306,8 +308,10 @@
   .image {
     width: 70rem;
   }
+
   .mapContainer {
-    width: 800px;
+    width: 60rem;
+    height: 30rem;
   }
   .underMap {
     font-size: 1.8rem;
